# qkeysequencewidget

./: CMakeLists.txt  Doxyfile  LICENSE.BSD  README  index.html  params.json  qkeysequencewidget.dox
demos/design-time/: qkeysequencewidgetexample.pro
demos/design-time/src/: main.cpp  widget.cpp  widget.h  widget.ui
demos/run-time/: qkeysequencewidgetexample.pro
demos/run-time/src/: main.cpp  widget.cpp  widget.h
doc/html/: annotated.html  class_q_key_sequence_widget-members.html  class_q_key_sequence_widget.html  classes.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  index.hhc  index.hhk  index.hhp  index.html  license.html  pages.html  using.html
qkeysequencewidget/src/: qkeysequencewidget.cpp  qkeysequencewidget.h  qkeysequencewidget_p.h
